# Discord-Bot

./: README.md  commands.py  guild_prefixes.json  main.py  market_info.py  pyproject.toml  ticker_info.py
