[tool.poetry]
name = "team13repo"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
yahoo-fin = "^0.8.6"
flask = "^1.1.2"
iexfinance = "^0.5.0"
requests-html = "^0.10.0"
alpha-vantage = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
